# lxdm

./: AUTHORS  INSTALL  Makefile  Makefile.am  README  TODO  Xsession  autogen.sh  configure.ac  lxdm.c  lxdm.conf  lxdm.h  lxdm.spec.in
data/: Makefile.am  Makefile.in  Xsession  Xsession.in  config.ui  lang.txt  lxdm  lxdm.conf  lxdm.conf.in  lxdm.glade  lxdm.in
data/themes/Industrial/: greeter-gtk3.ui  greeter.ui  gtk.css
gnome-shell/LXDM_User_Switch@dgod/: extension.js  metadata.json
lxdm-temp/: Makefile  Xsession  greeter-test.c  greeter.c  lxdm.c  lxdm.conf  lxdm.h  ui.c
pam/: Makefile.am  Makefile.in  lxdm
po/: LINGUAS  POTFILES.in  POTFILES.skip  REMEMBER  af.po  am.po  ar.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  frp.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  km.po  kn.po  (+35 more)
src/: Makefile.am  auth.c  auth.h  cgroup.c  cgroup.h  config.c  greeter-gdk.c  greeter-utils.c  greeter-utils.h  greeter.c  lang.c  lang.h  langlist.c  lxcom.c  lxcom.h  lxdm-ui.c  lxdm.c  lxdm.h  numlock.c  pam.c  ui.c  xconn.c
src/gdm/: gdm-languages.c
systemd/: Makefile.am
