NULL=

EXTRA_DIST= \
	lxdm.glade \
	Xsession \
	lxdm.conf \
	lxdm \
	$(NULL)

themedir=$(datadir)/lxdm/themes/Industrial
theme_DATA= \
	themes/Industrial/index.theme \
	themes/Industrial/gtkrc \
	themes/Industrial/wave.svg \
	themes/Industrial/login.png \
	themes/Industrial/shade.png \
	themes/Industrial/lang.png \
	themes/Industrial/session.png \
	themes/Industrial/greeter.ui \
	$(NULL)
